--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
+	<build>
+    	<finalName>suggestor</finalName>
+	</build>
 
 	<properties>
 		<spring.version>4.0.5.RELEASE</spring.version>
